src/components/Product/ProductCardOverlay.css
.ProductCardOverlay {
  position: absolute;
  height: calc(100% - 2.5em);
  width: 100%;
  background: #393434;
  overflow-y: auto;
  top: 0;
}

.ProductCardOverlay-circle {
  border-radius: 50%;
  height: 2.5em;
  width: 2.5em;
  margin: 0 auto;
  background-size: contain;
}

.ProductCardOverlay-item {
  display: inline-block;
  width: 33%;
  height: 40%;
}

.ProductCardOverlay h2,
.ProductCardOverlay p {
  text-align: center;
  color: #fff;
  font-size: .9em;
  text-align: center;
}

.ProductCardOverlay p {
  font-size: .7em;
}

.ProductCardOverlay-container {
  padding: .5em;
  height: calc(100% - 2.5em - .2em);
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;

}

@media only screen and (min-width: 800px) {
  .ProductCardOverlay-circle {
    height: 3.5em;
    width: 3.5em;
  }

  .ProductCardOverlay p {
    font-size: .9em;
  }

  .ProductCardOverlay h2 {
    font-size: 1.2em;
  }

}

